# truncanator

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.continue/prompts/: main-prompt.prompt  new-prompt-file.prompt
.github/workflows/: rust.yml
prompts/: main-prompt.txt
src/: main.rs
src/tests/: mod.rs
