[package]
name = "trunc_filenames"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.10.0"
assert_fs = "1.1"
predicates = "3.1"
pretty_assertions = "1.4"
test-case = "3.3"

[features]
